--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.32.8",
     "shortid": "^2.2.16",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "node ./scripts/create-env.js && react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts start",
+    "build": "node ./scripts/create-env.js && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
