--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
     "sass": "^1.32.8",
     "shortid": "^2.2.16",
     "web-vitals": "^1.1.0"
